# catasto-ingest

./: .gitignore  .prefectignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
development/: index.html
docs/: development.md  index.md
flows/: carto.py  demo.py  first_test.py
flows/deployments/: demo.yaml  demo_deployment.py
libs/src/catasto/: README.md  pyproject.toml
libs/src/catasto/catasto/: census.py  parser.py  reader.py
libs/src/catasto/catasto/schemas/: building.py  carto.py  census.py  common.py  database_models.py  entitlement.py  enumeration.py  land.py  subject.py
libs/src/catasto/catasto/schemas/catastodb/: models.py
libs/src/catasto/tests/: conftest.py  test_catasto.py  test_parser.py  test_reader.py
libs/src/catasto/tests/data/: H501D076700.CTF  textfile.SOG
libs/src/change-notifier/: README.md  pyproject.toml
libs/src/change-notifier/change_notifier/: example_script.py  generic_notifier.py  message.py  reftree_notifier.py
libs/src/sister/: pyproject.toml
libs/src/sister/documentation/: mkdocs.yml
libs/src/sister/documentation/diagrams/: archive_class_design.excalidraw
libs/src/sister/sister/: archive.py  client.py  storage.py
libs/src/sister/tests/: conftest.py  test_sister.py
libs/src/sister/tests/data/: sample_rieti.txt
scripts/docker/: docker-compose-prefect.yml
