[tool.poetry]
name = "catasto-ingest"
version = "0.1.0"
description = "Catasto workflow for the automatic ingestion from Sister"
authors = ["Francesco Bartoli <francesco.bartoli@geobeyond.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.0.3"
pyfiglet = "^0.8.post1"
sister = {path = "libs/src/sister"}
smidt = {path = "libs/src/smidt"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
