[tool.poetry]
name = "catasto"
version = "0.1.0"
description = ""
authors = ["Francesco Bartoli <francesco.bartoli@geobeyond.it>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
py-scdb = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
